--- a/src/only.scss
+++ b/src/only.scss
@@ -2,7 +2,7 @@
 ::before,
 ::after
 body {
-    overflow: hidden;
+    overflow: auto;
     margin: 0;
     padding: 0;
     background-repeat: no-repeat;
@@ -16,11 +16,6 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'Inter';
     font-style: normal;
     color: white;
-}
-.main1{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
 }
 .megamain{
     display: flex;
@@ -91,7 +86,6 @@ h1, h2, h3, h4, h5, h6{
     display: flex;
     flex-direction: column;
     background: #030717;
-    flex: 1;
 }
 .change_offers{
     display: flex;
@@ -372,8 +366,8 @@ h1, h2, h3, h4, h5, h6{
     display: flex;
     flex-direction: column;
     background-color: #05203b;
-    width: 12vw;
-    height: 8vw;
+    width: 17vw;
+    height: 10vw;
     margin-block-start: 0.2vw;
     margin-block-end: 1vw;
 
@@ -381,14 +375,14 @@ h1, h2, h3, h4, h5, h6{
 .kyrs_1{
    display: flex;
    flex-direction: row;
-   margin-block: 0.6vw;
+   margin-block: 1vw;
    height: 1vw;
    align-items: center;
-   margin-left: 0.2vw;
+   margin-left: 0.3vw;
      h2{
-     font-size: 0.7vw;
+     font-size: 1vw;
      font-weight: 500;
-     margin-inline: 0.2vw;
+     margin-inline: 0.3vw;
      }
 }
 .sb_icon{
@@ -400,7 +394,7 @@ h1, h2, h3, h4, h5, h6{
     display: flex;
     flex-direction: column;
     background-color: rgb(81, 42, 239);
-    width: 12vw;
+    width: 17vw;
     align-items: center;
      h1{
         font-size: 1vw;
@@ -413,7 +407,7 @@ h1, h2, h3, h4, h5, h6{
     border-radius: 0.4vw;
     display: flex;
     background-color: #05203b;
-    width: 12vw;
+    width: 17vw;
     margin-block-start: 0.2vw;
     margin-block-end: 1vw;
     flex-direction: column;
@@ -426,9 +420,9 @@ h1, h2, h3, h4, h5, h6{
     align-items: center;
     margin-left: 1vw;
       h3{
-      font-size: 0.7vw;
+      font-size: 1vw;
       font-weight: 500;
-      margin-inline: 0.2vw;
+      margin-inline: 0.3vw;
       }
 }
 .obm1{
@@ -446,14 +440,14 @@ h1, h2, h3, h4, h5, h6{
       }
 }
 .sb_icon1{
-    height: 1.5vw;
-    width: 1.5vw;
-    margin-right: 1vw;
+    width: 2.2vw;
+    width: 2.2vw;
+    margin-right: 1.5vw;
 }
 .sb_icon2{
-    height: 1.5vw;
-    width: 1.5vw;
-    margin-left: 1vw;
+    width: 2.2vw;
+    width: 2.2vw;
+    margin-left: 1.5vw;
 }
 .vs_obm{
     display: flex;
@@ -462,16 +456,16 @@ h1, h2, h3, h4, h5, h6{
 .vs_obm1{
     display: flex;
     flex-direction: column;
-    margin-left: 0.6vw;
-    margin-block-end: 0.6vw;
-    margin-block-start: 0vw;
+    margin-left: 1.4vw;
+    margin-block-end: 1vw;
+    margin-block-start: 0.3vw;
 }
 .vs_obm2{
     display: flex;
     flex-direction: column;
-    margin-left: 4vw;
-    margin-block-end: 0.6vw;
-    margin-block-start: 0vw;
+    margin-left: 5.2vw;
+    margin-block-end: 1vw;
+    margin-block-start: 0.3vw;
 }
 
 .obm2{
@@ -480,7 +474,7 @@ h1, h2, h3, h4, h5, h6{
     height: 1vw;
     align-items: center;
       h3{
-      font-size: 0.7vw;
+      font-size: 1vw;
       font-weight: 500;
     }
 }
@@ -490,7 +484,7 @@ h1, h2, h3, h4, h5, h6{
     height: 1vw;
     align-items: center;
       h3{
-      font-size: 0.7vw;
+      font-size: 1vw;
       font-weight: 500;
     }
 }
@@ -500,7 +494,7 @@ h1, h2, h3, h4, h5, h6{
     height: 1vw;
     align-items: center;
       h3{
-      font-size: 0.7vw;
+      font-size: 1vw;
       font-weight: 500;
     }
 }
@@ -510,7 +504,7 @@ h1, h2, h3, h4, h5, h6{
     height: 1vw;
     align-items: center;
       h3{
-      font-size: 0.7vw;
+      font-size: 1vw;
       font-weight: 500;
     }
 }
@@ -521,15 +515,12 @@ h1, h2, h3, h4, h5, h6{
   height: 7vw;
   flex-direction: row;
   justify-content: space-between;
-  align-self: flex-end;
 }
-.logo1 {
+.logo {
   display: flex;
-
-}
-.pic14{
-margin-right: 0.2vw;
-margin-block-start: 0.2vw;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
 }
 .picture {
   margin-block-start: 2.3vw;
@@ -537,14 +528,28 @@ margin-block-start: 0.2vw;
 .podval_txt {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-left: 12.5vw;
 }
+.podval_txt1 {
+  display: flex;
+  flex-direction: row;
+}
+.podval_txt1  h3 {
+  margin-block-start: 2vw;
+  margin-block-end: 0vw;
+  font-size: 1.5vw;
+  font-weight: 400;
+  }
+.podval_txt1  h2 {
+  margin-block-start: 2vw;
+  margin-block-end: 0vw;
+  font-size: 1.5vw;
+  font-weight: 700;
+  }
 .podval_txt2  h3 {
   color: #FFFFFFA6;
-  margin-block-start: -0.4vw;
-  margin-left: 1.8vw;
-  font-size: 0.55vw;
+  margin-block-start: -0.2vw;
+  margin-left: 0.3vw;
+  font-size: 0.6vw;
   font-weight: 400;
   }
 .social {
