--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -6,8 +6,7 @@ body {
     margin: 0;
     padding: 0;
     background-repeat: no-repeat;
-} visible
-vzxcvz
+}
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 .joining , .logo , .mid_head{
