--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ vzxcvz
 h1, h2, h3, h4, h5, h6{
     font-family: 'Inter';
     font-style: normal;
-    color: white;
+    color: whifdghdfge;
 }
 .main1{
     display: flex;
